--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#设置过滤文件
+﻿#设置过滤文件
 
 # Compiled class file
 *.class
@@ -21,5 +21,10 @@
 *.tar.gz
 *.rar
 
+.idea/
+out/
+*.xml
+*.iml
+*.class
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
